--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #f1f1f1;
+    --primary: #d2d2d2;
     --secondary: rgba(131, 131, 131, 0.4);
     --tertiary: rgba(73, 73, 73, 0.6);
 }
@@ -20,8 +20,7 @@
 
 *::-webkit-scrollbar-thumb {
     background-color: var(--secondary);
-    border-radius: 14px;
-    border: 3px solid var(--primary);
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
